<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/black"
              android:orientation="vertical"
              android:gravity="center"
        >
    <TextView
            android:id="@+id/about_name_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/aboutSingleLabel"
            android:text="@string/app_name"
            />
    <TextView android:id="@+id/about_version"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              style="@style/aboutSingleLabel"
              android:text="@string/app_version"
            />
    <TextView android:id="@+id/about_url"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              style="@style/aboutSingleLabel"
              android:paddingBottom="20px"
              android:text="@string/url"
            />
    <TextView android:id="@+id/about_devlopers_label"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              style="@style/aboutSingleLabel"
              android:text="@string/developers_label"
            />
    <TextView android:id="@+id/about_devlopers"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              style="@style/aboutSingleLabel"
              android:paddingBottom="20px"
              android:text="@string/developers"
            />
    <TextView android:id="@+id/about_copyright_label"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              style="@style/aboutSingleLabel"
              android:text="@string/copyright_label"
            />
    <TextView android:id="@+id/about_copyright"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              style="@style/aboutSingleLabel"
              android:text="@string/copyright"
            />
    <TextView android:id="@+id/about_copyright_url"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              style="@style/aboutSingleLabel"
              android:text="@string/copyright_holder_url"
            />
</LinearLayout>